src/compile_warnings.txt
./stage/ast/asts/ast_function_decl/ast_function_decl_create/ast_function_decl_create.c: In function ‘ast_function_decl_create’:
./stage/ast/asts/ast_function_decl/ast_function_decl_create/ast_function_decl_create.c:7:45: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
    7 |     ast->raw.function_decl_value.parameters = parameters;
      |                                             ^
./stage/ast/asts/ast_function_decl/ast_function_decl_create/ast_function_decl_create.c:8:40: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
    8 |     ast->raw.function_decl_value.block = block;
      |                                        ^
./stage/ast/asts/ast_function_decl/ast_function_decl_destroy/ast_function_decl_destroy.c: In function ‘ast_function_decl_destroy’:
./stage/ast/asts/ast_function_decl/ast_function_decl_destroy/ast_function_decl_destroy.c:11:22: error: ‘ast_function_decl_t’ has no member named ‘params’
   11 |     if (function_decl->params != NULL) {
      |                      ^~
./stage/ast/asts/ast_function_decl/ast_function_decl_destroy/ast_function_decl_destroy.c:12:36: error: ‘ast_function_decl_t’ has no member named ‘params’
   12 |         array_destroy(function_decl->params);
      |                                    ^~
./stage/ast/asts/ast_function_decl/ast_function_decl_direct_destroy/ast_function_decl_direct_destroy.c: In function ‘ast_function_decl_direct_destroy’:
./stage/ast/asts/ast_function_decl/ast_function_decl_direct_destroy/ast_function_decl_direct_destroy.c:10:22: error: ‘ast_function_decl_t’ has no member named ‘params’
   10 |     if (function_decl.params != NULL) {
      |                      ^
./stage/ast/asts/ast_function_decl/ast_function_decl_direct_destroy/ast_function_decl_direct_destroy.c:11:36: error: ‘ast_function_decl_t’ has no member named ‘params’
   11 |         array_destroy(function_decl.params);
      |                                    ^
In file included from ./stage/parser/parser_parse_arguments/parser_parse_arguments.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/parser/parser_parse_arguments/parser_parse_arguments.h:13:1: error: unknown type name ‘ast_t’
   13 | ast_t* parser_parse_arguments(parser_t* parser);
      | ^~~~~
./stage/parser/parser_parse_arguments/parser_parse_arguments.c:3:1: error: unknown type name ‘ast_t’
    3 | ast_t* parser_parse_arguments(parser_t* parser)
      | ^~~~~
In file included from ./stage/parser/parser_parse_block/parser_parse_block.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/parser/parser_parse_block/parser_parse_block.h:29:1: error: unknown type name ‘ast_t’
   29 | ast_t* parser_parse_block(parser_t* parser);
      | ^~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:3:1: error: unknown type name ‘ast_t’
    3 | ast_t* parser_parse_block(parser_t* parser)
      | ^~~~~
./stage/parser/parser_parse_block/parser_parse_block.c: In function ‘parser_parse_block’:
./stage/parser/parser_parse_block/parser_parse_block.c:9:5: error: unknown type name ‘ast_t’
    9 |     ast_t* block = parser_parse_block(parser);
      |     ^~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:12:27: error: ‘TOKEN_TYPE_BRACE_OPEN’ undeclared (first use in this function)
   12 |     parser_expect(parser, TOKEN_TYPE_BRACE_OPEN);
      |                           ^~~~~~~~~~~~~~~~~~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:12:27: note: each undeclared identifier is reported only once for each function it appears in
./stage/parser/parser_parse_block/parser_parse_block.c:15:57: error: ‘ast_destroy’ undeclared (first use in this function)
   15 |     array_t* statements = array_create((array_destroy_t)ast_destroy);
      |                                                         ^~~~~~~~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:17:36: error: ‘TOKEN_TYPE_BRACE_CLOSE’ undeclared (first use in this function); did you mean ‘TOKEN_TYPE_VALUE_FALSE’?
   17 |     while (PARSER_CURRENT->type != TOKEN_TYPE_BRACE_CLOSE && PARSER_HAS_CURRENT) {
      |                                    ^~~~~~~~~~~~~~~~~~~~~~
      |                                    TOKEN_TYPE_VALUE_FALSE
./stage/parser/parser_parse_block/parser_parse_block.c:18:9: error: unknown type name ‘ast_t’
   18 |         ast_t* statement = parser_parse_statement(parser);
      |         ^~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:18:28: warning: implicit declaration of function ‘parser_parse_statement’ [-Wimplicit-function-declaration]
   18 |         ast_t* statement = parser_parse_statement(parser);
      |                            ^~~~~~~~~~~~~~~~~~~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:18:28: warning: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
./stage/parser/parser_parse_block/parser_parse_block.c:27:5: error: unknown type name ‘ast_t’
   27 |     ast_t* ast = ast_block_create(statements, statement_count);
      |     ^~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:27:18: warning: implicit declaration of function ‘ast_block_create’ [-Wimplicit-function-declaration]
   27 |     ast_t* ast = ast_block_create(statements, statement_count);
      |                  ^~~~~~~~~~~~~~~~
./stage/parser/parser_parse_block/parser_parse_block.c:27:18: warning: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
./stage/parser/parser_parse_block/parser_parse_block.c:9:12: warning: unused variable ‘block’ [-Wunused-variable]
    9 |     ast_t* block = parser_parse_block(parser);
      |            ^~~~~
./stage/parser/parser_parse_function_decl/parser_parse_function_decl.c: In function ‘parser_parse_function_decl’:
./stage/parser/parser_parse_function_decl/parser_parse_function_decl.c:8:25: warning: implicit declaration of function ‘parser_parse_parameters’ [-Wimplicit-function-declaration]
    8 |     ast_t* parameters = parser_parse_parameters(parser);
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./stage/parser/parser_parse_function_decl/parser_parse_function_decl.c:8:25: warning: initialization of ‘ast_t *’ {aka ‘struct ast_t *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
./stage/parser/parser_parse_function_decl/parser_parse_function_decl.c:9:20: warning: implicit declaration of function ‘parser_parse_block’ [-Wimplicit-function-declaration]
    9 |     ast_t* block = parser_parse_block(parser);
      |                    ^~~~~~~~~~~~~~~~~~
./stage/parser/parser_parse_function_decl/parser_parse_function_decl.c:9:20: warning: initialization of ‘ast_t *’ {aka ‘struct ast_t *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
In file included from ./stage/parser/parser_parse_parameters/parser_parse_parameters.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/parser/parser_parse_parameters/parser_parse_parameters.h:13:1: error: unknown type name ‘ast_t’
   13 | ast_t* parser_parse_parameters(parser_t* parser);
      | ^~~~~
./stage/parser/parser_parse_parameters/parser_parse_parameters.c:3:1: error: unknown type name ‘ast_t’
    3 | ast_t* parser_parse_parameters(parser_t* parser)
      | ^~~~~
